# sd-tagging-helper

./: .gitignore  README.md  autotagger.py  helper.py  pyproject.toml  qml_rc.py
qml/: CurrentColumn.qml  DDBButton.qml  DDBColumn.qml  Main.qml  PackageWindow.qml  Tags.qml  TagsColumn.qml  View.qml  WindowBar.qml
tagger/: dbimutils.py  interrogator.py
