[tool.poetry]
name = "sd-tagging-helper"
version = "0.1.0"
description = ""
authors = ["Ruin0x11 <ipickering2@gmail.com>"]
readme = "README.md"
packages = [{include = "sd_tagging_helper"}]

[tool.poetry.dependencies]
python = "^3.10"
pyqt5 = "5.15.7"
pillow = "^9.3.0"
onnxruntime-gpu = "^1.14.1"
opencv-python = "^4.7.0.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
